# scaler-hackathon

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  pools.py  pyproject.toml  tasks.py
scenarios/: aliased_fault.py  base.py  circuit_breaker_noop.py  code_context_builder.py  confidence_inversion.py  easy_memory_leak.py  grader_p2.py  hard_distributed_deadlock.py  heldout.py  info_ordering.py  medium_cascading_failure.py  severity_inversion.py
server/: app.py  code_workspace.py  incident_environment.py
simulation/: alerts.py  infrastructure.py  logs.py  metrics.py  service.py
snapshots/auth_v180/: git_log.json
snapshots/auth_v180/diffs/: b8e2d44.patch
snapshots/orders_retry_storm/: git_log.json
snapshots/orders_retry_storm/diffs/: d09a4f1.patch  f8c9b13.patch
snapshots/orders_v231/: git_log.json
snapshots/orders_v231/diffs/: a3f7c91.patch
snapshots/orders_v300/: git_log.json
snapshots/orders_v300/diffs/: d2b9c11.patch
snapshots/payment_threadpool/: git_log.json
snapshots/payment_threadpool/diffs/: 11abf04.patch
snapshots/payment_v310/: git_log.json
snapshots/payment_v310/diffs/: c5a1f77.patch
snapshots/queue_v210/: git_log.json
snapshots/queue_v210/diffs/: e1f4a02.patch
snapshots/shared_libs_dep/: git_log.json
snapshots/shared_libs_dep/diffs/: 9d2e7af.patch
training/: __init__.py  ablations.py  behavioral_metrics.py  belief_aux_loss.py  curriculum.py  grpo_train.py  policies.py  pool_b_baseline.py  report.py  rollouts.py  segment_grpo.py  trajectory_dataset.py  variance_gate.py
(+25 files in other folders)
